fix: letter spacing in RTL languages (FM-463)

--- a/src/components/prompt-text/prompt-text.scss
+++ b/src/components/prompt-text/prompt-text.scss
@@ -98,8 +98,3 @@
 .text-red {
   color: red;
 }
-
-// Letter spacing
-.letter-spacing {
-  margin-left: 5px;
-}
